fix: 자바스크립트 오류 해결

--- a/src/main/resources/templates/lotto.html
+++ b/src/main/resources/templates/lotto.html
@@ -71,11 +71,12 @@
 </div>
 <script>
     var count = 0;
-    var selfCount = document.getElementById("countOfSelf").value;
+    var selfCount = document.getElementById("selfCount").value;
     var text = "";
     function showLotto() {
 
         if(count < selfCount){
+            console.log('showLotto')
             count++;
             for(var i=1; i<=6; i++)
             {
