--- a/src/main/resources/templates/purchased_tickets.html
+++ b/src/main/resources/templates/purchased_tickets.html
@@ -104,7 +104,7 @@
 			var bonusBall = document.getElementById('bonusBall').value;
 			if (isNaN(bonusBall) || bonusBall < 1 || bonusBall > 45) {
 				alert("당첨번호의 값이 올바르지 않습니다.");
-				document.getElementById(bonusBall).focus();
+				document.getElementById('bonusBall').focus();
 				return false;
 			}
 		}
