--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -19,11 +19,11 @@
         </tr>
         </thead>
         <tbody>
-        {{#winnersResult}}
+        {{#winnerResults}}
         <tr>
             <th scope="row">{{this}}</th>
         </tr>
-        {{/winnersResult}}
+        {{/winnerResults}}
         </tbody>
     </table>
 </div>
