refactor: fix details

--- a/src/main/resources/templates/lotto_result.html
+++ b/src/main/resources/templates/lotto_result.html
@@ -46,6 +46,9 @@
 					</div>
 				{{/results}}
 				<div class="mb-2">
+					<p class="h5">구매 금액: {{money}}원, 총 수익금: {{profit}}원</p>
+				</div>
+				<div class="mb-2">
 					<p class="h5">총 수익률은 {{incoming_rate}}%입니다.</p>
 				</div>
 			</div>
