--- a/src/main/resources/templates/purchased_tickets.html
+++ b/src/main/resources/templates/purchased_tickets.html
@@ -28,7 +28,7 @@
 							<span class="badge badge-pill badge-secondary">{{@index}}</span>
 							{{#lottoNumbers}}
 								<label class="btn btn-outline-dark mb-1 active disable">
-									<input type="checkbox" checked autocomplete="off" disable> {{this}}
+									<input type="checkbox" checked autocomplete="off" disabled> {{this}}
 								</label>
 							{{/lottoNumbers}}
 						</div>
@@ -83,7 +83,7 @@
 
 			<div class="col-auto mt-4 text-center">
 				<button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#winningLottoModal">당첨 로또번호 입력하기</button>
-				<a class="btn btn-outline-secondary" href="/win/result">당첨여부 확인</a>
+				<a class="btn btn-outline-secondary" href="/">홈으로 가기</a>
 			</div>
 
 		</div>
