--- a/src/main/resources/templates/lotto_result.html
+++ b/src/main/resources/templates/lotto_result.html
@@ -1,63 +1,71 @@
 <!doctype html>
 <html lang="ko">
 <head>
-	<!-- Required meta tags -->
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-	<title>로또</title>
+    <title>로또</title>
 </head>
 
 <body class="bg-dark">
-	<div class="container mt-5">
-		<div class="jumbotron">
-			<h3 class="display-4">당첨내역 확인</h3>
+<div class="container mt-5">
+    <div class="jumbotron">
+        <h3 class="display-4">당첨내역 확인</h3>
 
-			<hr class="my-4">
+        <hr class="my-4">
 
-			<div class="container">
-				<div class="mb-2">
-					<h4>{{week}}주차 당첨 로또 번호</h4>
-					<small class="text-muted">
-						로또 번호
-					</small>
-					<div class="btn-group-toggle" data-toggle="buttons">
-						{{#winningNumbers}}
-							<button type="button" class="btn btn-secondary mb-1" disabled>{{this}}</button>
-						{{/winningNumbers}}
-					</div>
-					<small class="text-muted">
-						보너스 볼
-					</small>
-					<div class="btn-group-toggle" data-toggle="buttons">
-						<button type="button" class="btn btn-warning mb-1" disabled>{{bonusBall}}</button>
-					</div>
-				</div>
+        <div class="container">
+            <div class="mb-2">
+                <h4>{{week}}주차 당첨 로또 번호</h4>
+                <small class="text-muted">
+                    로또 번호
+                </small>
+                <div class="btn-group-toggle" data-toggle="buttons">
+                    {{#winningNumbers}}
+                    <button type="button" class="btn btn-secondary mb-1" disabled>{{this}}</button>
+                    {{/winningNumbers}}
+                </div>
+                <small class="text-muted">
+                    보너스 볼
+                </small>
+                <div class="btn-group-toggle" data-toggle="buttons">
+                    <button type="button" class="btn btn-warning mb-1" disabled>{{bonusBall}}</button>
+                </div>
+            </div>
 
-				<hr class="my-3">
+            <hr class="my-3">
 
-				<h4>당첨 통계</h4>
-				{{#results}}
-					<div class="mb-2">
-						<p>{{this}}</p>
-					</div>
-				{{/results}}
-				<div class="mb-2">
-					<p class="h5">구매 금액: {{money}}원, 총 수익금: {{profit}}원</p>
-				</div>
-				<div class="mb-2">
-					<p class="h5">총 수익률은 {{incoming_rate}}%입니다.</p>
-				</div>
-			</div>
-		</div>
-	</div>
+            <h4>당첨 통계</h4>
+            {{#results}}
+            <div class="mb-2">
+                <p>{{this}}</p>
+            </div>
+            {{/results}}
+            <div class="mb-2">
+                <p class="h5">구매 금액: {{money}}원, 총 수익금: {{profit}}원</p>
+            </div>
+            <div class="mb-2">
+                <p class="h5">총 수익률은 {{incoming_rate}}%입니다.</p>
+            </div>
+        </div>
+    </div>
+</div>
 
-	<!-- Optional JavaScript -->
-	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body></html>
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+</body>
+</html>
