--- a/src/main/resources/templates/lottoNumbers.html
+++ b/src/main/resources/templates/lottoNumbers.html
@@ -17,7 +17,7 @@
 <body>
     <section class="container">
         <div class="text-right">{{name}} 님</div>
-        <form action="/lottoResult" method="post">
+        <form action="/result" method="post">
         <h1>로또 번호 입력</h1>
 
             <!-- 반복...? -->
