--- a/src/main/resources/templates/lottoPaymentInfo.html
+++ b/src/main/resources/templates/lottoPaymentInfo.html
@@ -18,7 +18,7 @@
     <section class="container">
         <div class="text-right">{{name}} 님</div>
         <h1>로또 구매</h1>
-        <form action="/buyLotto" method="post">
+        <form action="/lotto" method="post">
             <div class="form-group">
                 <label for="payment">구입 금액</label>
                 <input type="number" id="payment" name="payment" class="form-control" />
