--- a/src/main/resources/templates/lottoResult.html
+++ b/src/main/resources/templates/lottoResult.html
@@ -123,7 +123,7 @@
         <hr>
         <div class="jumbotron">
             <div class="text-right">
-                Copylright © <strong>우아한바다이야기</strong>. All rights reserved.
+                Copyright © <strong>우아한바다이야기</strong>. All rights reserved.
             </div>
         </div>
     </footer>
