MOD : lottoRound 추가

--- a/src/main/resources/templates/lotto.html
+++ b/src/main/resources/templates/lotto.html
@@ -36,6 +36,7 @@
     <div hidden>
         <input type="hidden" value="{{userLotto}}" name="userLotto"/>
         <input type="hidden" value="{{round}}" name="round"/>
+        <input type="hidden" value="{{lottoRound}}" name="lottoRound"/>
     </div>
     <div id="bottom-panel" style="float: right; margin-right: 500px">
         <button type="submit" class="btn btn-secondary">당첨 번호 입력</button>
