--- a/src/main/resources/templates/winNumber.html
+++ b/src/main/resources/templates/winNumber.html
@@ -25,6 +25,7 @@
     </div>
     <input type="hidden" value="{{userLotto}}" name="userLotto"/>
     <input type="hidden" value="{{round}}" name="round"/>
+    <input type="hidden" value="{{lottoRound}}" name="lottoRound"/>
     <div id="bottom-panel" style="float: right; margin-right: 500px">
         <button type="submit" class="btn btn-secondary">결과 확인</button>
     </div>
