--- a/src/main/resources/templates/html/LottoMain.html
+++ b/src/main/resources/templates/html/LottoMain.html
@@ -14,6 +14,7 @@
     </div>
     <div>
         <form action="/search">
+            <input type="number" name="round">
             <input type="submit" id="search" value="목록 조회하기">
         </form>
     </div>
