refactor: Modify exception

--- a/src/main/resources/templates/lottoResult.html
+++ b/src/main/resources/templates/lottoResult.html
@@ -27,7 +27,7 @@
     <section class="container">
         <article class="text-center">
             <img src="https://via.placeholder.com/1920x400.png?text=AD (1920 x 400)" class="img-fluid rounded">
-            <div class="text-right">{{name}} 님</div>
+            <div class="text-right">{{result.name}} 님</div>
             <h3>당첨 결과</h3>
 
             <div class="d-inline-flex">
