feat: add showing lotto game histories web UI

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,7 +26,8 @@
             <button class="btn btn-warning btn-lg btn-block" data-toggle="modal" data-target="#winningLottoModal">지난 주
                 당첨로또 입력하기
             </button>
-            <a class="btn btn-warning btn-lg btn-block" href="/win/result">당첨여부 확인</a>
+            <a class="btn btn-warning btn-lg btn-block" href="/win/result">최근 당첨여부 확인</a>
+            <a class="btn btn-warning btn-lg btn-block" href="/win/result/select">지난 회차 당첨내역 확인</a>
         </div>
     </div>
 
