--- a/src/main/resources/templates/purchasing_lotto.html
+++ b/src/main/resources/templates/purchasing_lotto.html
@@ -46,6 +46,7 @@
 
             <div class="col-auto mt-4 text-center">
                 <button type="submit" class="btn btn-outline-secondary">구매하기</button>
+                <a class="btn btn-outline-secondary" href="/">홈으로 가기</a>
             </div>
             <input type="hidden" id="max-custom-amount">
             <input type="hidden" name="lottos" id="lottos">
