--- a/src/main/resources/templates/select_result.html
+++ b/src/main/resources/templates/select_result.html
@@ -15,42 +15,17 @@
 <body class="bg-dark">
 <div class="container mt-5">
     <div class="jumbotron">
-        <h3 class="display-4">당첨내역 확인</h3>
-
+        <h3 class="display-4">지난 당첨내역 확인</h3>
         <hr class="my-4">
 
         <div class="container">
-            <div class="mb-2">
-                <h4>{{week}}주차 당첨 로또 번호</h4>
-                <small class="text-muted">
-                    로또 번호
-                </small>
-                <div class="btn-group-toggle" data-toggle="buttons">
-                    {{#winningNumbers}}
-                    <button type="button" class="btn btn-secondary mb-1" disabled>{{this}}</button>
-                    {{/winningNumbers}}
+            <h4>회차 선택하기</h4>
+            <div class="mb-5">
+                {{#winningNumbers}}
+                <div class="mb-2">
+                    <button type="button" class="btn btn-outline-secondary">{{this}}주차 당첨내역 보기</button>
                 </div>
-                <small class="text-muted">
-                    보너스 볼
-                </small>
-                <div class="btn-group-toggle" data-toggle="buttons">
-                    <button type="button" class="btn btn-warning mb-1" disabled>{{bonusBall}}</button>
-                </div>
-            </div>
-
-            <hr class="my-3">
-
-            <h4>당첨 통계</h4>
-            {{#results}}
-            <div class="mb-2">
-                <p>{{this}}</p>
-            </div>
-            {{/results}}
-            <div class="mb-2">
-                <p class="h5">구매 금액: {{money}}원, 총 수익금: {{profit}}원</p>
-            </div>
-            <div class="mb-2">
-                <p class="h5">총 수익률은 {{incoming_rate}}%입니다.</p>
+                {{/winningNumbers}}
             </div>
         </div>
 
