--- a/src/main/resources/templates/lotto_result.html
+++ b/src/main/resources/templates/lotto_result.html
@@ -55,6 +55,7 @@
         </div>
 
         <div class="col-auto mt-4 text-center">
+            <a class="btn btn-outline-secondary" href="/win/select">다른 주차 당첨 확인하기</a>
             <a class="btn btn-outline-secondary" href="/">홈으로 가기</a>
         </div>
     </div>
