--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,7 +27,7 @@
                 당첨로또 입력하기
             </button>
             <a class="btn btn-warning btn-lg btn-block" href="/win/result">최근 당첨여부 확인</a>
-            <a class="btn btn-warning btn-lg btn-block" href="/win/result/select">지난 회차 당첨내역 확인</a>
+            <a class="btn btn-warning btn-lg btn-block" href="/win/select">지난 회차 당첨내역 확인</a>
         </div>
     </div>
 
