feat: WebUILottoApplicationWithDB Class
회차별 조회 기능 구현

--- a/src/main/resources/templates/all.html
+++ b/src/main/resources/templates/all.html
@@ -10,9 +10,25 @@
     <title>로또</title>
 </head>
 <body>
-<div id="container">
-    <h1>로또 결과</h1>
+<div id="container" class="all">
+    <h1>로또 결과 🤗</h1>
 
+    <form action="/all" method="GET">
+        {{{select}}}
+        <input type="submit" class="round" value="회차 선택">
+    </form>
+
+    <h2>당첨 번호</h2>
+    <p>
+        {{{winningLotto}}}
+    </p>
+
+    <h2>구입 번호</h2>
+    <p>
+        {{{lottos}}}
+    </p>
+
+    <h2>해당 회차 결과</h2>
     <p>
         {{#result}}
         1등🎉🎉 : {{first}}개<br>
@@ -27,6 +43,7 @@
     </p>
 
     <a href="/"><input type="submit" value="처음으로"></a>
+
 </div>
 </body>
 </html>
