--- a/src/main/resources/templates/result_db.html
+++ b/src/main/resources/templates/result_db.html
@@ -27,6 +27,7 @@
     </p>
 
     <a href="/"><input type="submit" value="처음으로"></a>
+    <a href="/all?round=1"><input type="submit" value="모든 결과"></a>
 </div>
 </body>
 </html>
