ADD : 결과 보여주기

--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -27,8 +27,12 @@
         </tbody>
     </table>
 </div>
-<div id="bottom-panel">
+<div id="middle-panel">
     <h3 align="center">{{returnRate}}</h3>
+</div>
+<div id="bottom-panel" style="float: right; margin-right: 500px">
+    <button type="submit" class="btn btn-secondary"><a href="/hits" style="color: #ffffff; text-decoration: none">회차 결과
+        조회하기</a></button>
 </div>
 </body>
 </html>
