--- a/src/main/resources/templates/inputmanualnumbers.html
+++ b/src/main/resources/templates/inputmanualnumbers.html
@@ -12,10 +12,10 @@
 <div class="wrapper">
     <div class="vender" id="vender" style="background-image: url('images/vendersays.png');"></div>
     <div class="input-wrapper">
-        <form action="/" method="post">
-            <input type="text" name="manual-lotto-numbers">
-            <input type="text" name="manual-lotto-numbers">
-            <input type="text" name="manual-lotto-numbers">
+        <form action="/manual-numbers?quantity={{ quantity }}" method="post">
+            {{#iterator}}
+                <input type="text" name="manual-lotto-numbers-{{ this }}">
+            {{/iterator}}
             <button type="submit">번호 제출</button>
         </form>
     </div>
@@ -23,7 +23,7 @@
 
 <script>
     var i = 0;
-    var txt = '수동으로 구매할 로또 숫자들을 입력해주세요.'; /* {{{ message }}} */
+    var txt = "{{{ message }}}";
     var speed = 50; /* The speed/duration of the effect in milliseconds */
 
     function typeWriter() {
