--- a/src/main/resources/templates/inputwinningnumbers.html
+++ b/src/main/resources/templates/inputwinningnumbers.html
@@ -14,15 +14,16 @@
     <div class="input-wrapper">
         <div class="lotto-paper">
             <img src="images/lottologo.jpg" alt="">
-            <h3>제 1회</h3>
-            <p><span>자동</span> 44, 33, 22, 46, 41, 45</p>
-            <p><span>자동</span> 44, 33, 22, 46, 41, 45</p>
-            <p><span>자동</span> 1, 11, 21, 31, 41, 45</p>
-            <p><span>자동</span> 1, 11, 21, 31, 41, 45</p>
-            <p><span>자동</span> 1, 11, 21, 31, 41, 45</p>
+            <h3>제 {{ round }}회</h3>
+            {{#lottos}}
+            <div class="lotto-numbers">
+                <span>{{#if isAuto}}자동{{else}}수동{{/if}}</span>
+                {{#numbers}}<div class="lotto-number">{{ this }}</div>{{/numbers}}
+            </div>
+            {{/lottos}}
         </div>
-        <form action="/" method="post">
-            <input type="text" name="winning-lotto-numbers">
+        <form action="/winning" method="post">
+            <input type="text" name="winning-numbers">
             / <input id="bonus" type="text" name="winning-bonus-numbers">
             <button type="submit">입력</button>
         </form>
@@ -31,7 +32,7 @@
 
 <script>
     var i = 0;
-    var txt = '수동으로 3개, 자동으로 2개를 구매했습니다. 이번주 당첨 번호와 보너스 볼을 입력해주세요.'; /* {{{ message }}} */
+    var txt = "{{{ message }}}";
     var speed = 50; /* The speed/duration of the effect in milliseconds */
 
     function typeWriter() {
