--- a/src/main/resources/templates/lookupresult.html
+++ b/src/main/resources/templates/lookupresult.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
 
     <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/inputmanualquantity.css">
+    <link rel="stylesheet" href="css/lookupresult.css">
 
-    <title>수동 로또 개수 입력</title>
+    <title>결과 조회</title>
 </head>
 <body>
 <div class="wrapper">
     <div class="vender" id="vender" style="background-image: url('images/vendersays.png');"></div>
     <div class="input-wrapper">
-        <form action="/manual-quantity" method="post">
-            <input type="text" name="manual-quantity"> 개 수동으로
-            <button type="submit">구매</button>
-        <form>
+        <form action="/lookup" method="post">
+            <input type="text" name="round"> 회차
+            <button type="submit">조회</button>
+        </form>
     </div>
 </div>
 
