--- a/src/main/resources/templates/paymoney.html
+++ b/src/main/resources/templates/paymoney.html
@@ -12,7 +12,7 @@
     <div class="wrapper">
         <div class="vender" id="vender" style="background-image: url('images/vendersays.png');"></div>
         <div class="input-wrapper">
-            <form action="/" method="post">
+            <form action="/money" method="post">
                 <input type="text" name="money"> 원
                 <button type="submit">구매</button>
             </form>
@@ -21,7 +21,7 @@
 
     <script>
         var i = 0;
-        var txt = '안녕하세요! 로또를 구매하러 오셨군요~ 구입 금액을 입력해주세요.'; /* {{{ message }}} */
+        var txt = "{{{ message }}}";
         var speed = 50; /* The speed/duration of the effect in milliseconds */
 
         function typeWriter() {
