dto, dao, vo 로직 변경 및 구현 전체 로직 변경

--- a/src/main/resources/templates/view/lotto_manual_amount.html
+++ b/src/main/resources/templates/view/lotto_manual_amount.html
@@ -53,7 +53,7 @@
             <h4>{{error_amount}}</h4>
             <h4 class="cover-heading">수동 구매 개수를 입력해 주세요!</h4>
             <div class="form-group">
-                <p>총 구매한 개수는 {{amount}}개 입니다. </p>
+                <p>총 구매한 개수는 {{totalAmount}}개 입니다. </p>
                 <input class="form-control" type="text" id="customAmount" placeholder="개수 입력" name="customAmount"
                        required>
             </div>
