--- a/src/main/resources/templates/view/lotto_result.html
+++ b/src/main/resources/templates/view/lotto_result.html
@@ -60,6 +60,7 @@
                 {{this}} <br/>
                 {{/result}}
 
+                총 상금은 {{resultPrize}}원 입니다.<br/>
                 총 수익률은 {{resultIncomeRate}}% 입니다.
             </div>
         </form>
