추가 보너스 기능 구현

--- a/src/main/resources/templates/view/lotto_check_round.html
+++ b/src/main/resources/templates/view/lotto_check_round.html
@@ -49,8 +49,8 @@
     </header>
 
     <main role="main" class="inner cover">
-        <form action="/check" class="was-validated ">
-            <h4>{{error_ckeck}}</h4>
+        <form action="/find" class="was-validated ">
+            <h4>{{error_check}}</h4>
             <h4 class="cover-heading">회차를 입력해 주세요!</h4>
             <div class="form-group">
                 <input class="form-control" type="text" id="checkRound" placeholder="회차 입력" name="checkRound" required>
